# opencv_tasks

./: opencv_tasks.sln
1/: 1.vcxproj  1.vcxproj.filters  CMakeLists.txt  main.cpp
1/samples/: 1.correlation.tiff
